--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run tests
         run: cargo test --verbose
       - name: Run clippy
-        run: cargo clippy
+        run: cargo clippy -- -W clippy::pedantic -W clippy::nursery
       - name: Run fmt
         run: cargo fmt -- --check
   bench:
