--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 criterion = {version="0.4.0", features=["html_reports"]}
 
 [dependencies]
+pathfinding = "3.0.14"
 
 [[bench]]
 name = "aoc_bench"
