--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,6 @@ updates:
     schedule:
       interval: "daily"
     groups:
-      - deps:
+      deps:
         patterns:
-          - *
+          - "*"
